Tweaked CSS; fixed direct link seed bug

--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,7 @@ textarea {
 }
 
 #Details {
-    font-size: small;
+    font-size:   small;
     font-family: monospace;
+    color:       #555;
 }
