--- a/css/dismal.css
+++ b/css/dismal.css
@@ -1,12 +1,3 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 @import url(http://fonts.googleapis.com/css?family=Special+Elite);
 
@@ -18,11 +9,21 @@ textarea {
     color: #222;
 }
 
+@font-face {
+    font-family: 'TektonProBold';
+    src:         url('../fonts/tektonprobold.eot');
+    src:         url('../fonts/tektonprobold.eot') format('embedded-opentype'), url('../fonts/tektonprobold.woff') format('woff'), url('../fonts/tektonprobold.ttf') format('truetype'), url('../fonts/tektonprobold.svg#TektonProBold') format('svg');
+}
+
 html {
-    font-family:     Oswald, sans-serif;
-    background:      #fff300;
+    font-family:      Oswald, sans-serif;
+    /*background:      #fff300;*/
     /*background:      url("../img/film.jpg") no-repeat bottom center fixed;*/
-    background-size: cover;
+
+    background-image: linear-gradient(top, rgba(255, 71, 3, 255) 0%, rgba(255, 255, 1, 255) 50%, rgba(255, 71, 3, 255) 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.00, rgba(255, 71, 3, 255)), color-stop(0.50, rgba(255, 255, 1, 255)), color-stop(1.0, rgba(255, 71, 3, 255)));
+    background-image: -moz-linear-gradient(top, rgba(255, 71, 3, 255) 0%, rgba(255, 255, 1, 255) 50%, rgba(255, 71, 3, 255) 100%);
+    background-image: -o-linear-gradient(top, rgba(255, 71, 3, 255) 0%, rgba(255, 255, 1, 255) 50%, rgba(255, 71, 3, 255) 100%);
 }
 
 body {
@@ -35,8 +36,9 @@ body {
     /*font-size:   6em;*/
     font-size:   6em;
     text-align:  center;
-    font-family: "Oswald", sans-serif;
+    font-family: "TektonProBold", sans-serif;
     line-height: 1em;
+    text-shadow: 0px 0px 5px rgba(255, 255, 1, 255);
 }
 
 #Desc {
